--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <a href="photography/large/5-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/5-preview.jpg">
             </a>
-            <a href="/uploads/7765_010.jpg" class="pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/7765_010.jpg">
+            <a href="photography/large/6-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/6-preview.jpg">
             </a>
             <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="/uploads/012_007.jpg">
