--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <a href="photography/large/6-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/6-preview.jpg">
             </a>
-            <a href="/uploads/012_007.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/012_007.jpg">
+            <a href="photography/large/7-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/7-preview.jpg">
             </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_028.jpg"> </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_034.jpg"></a>
