--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
             <a href="photography/large/8-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/8-preview.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7796_034.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7837_017.jpg"></a>
+            <a href="photography/large/9-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/9-preview.jpg">
+            </a>
+            <a href="photography/large/10-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/10-preview.jpg">
+            </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7837_035.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7975_027.jpg"></a>
         </div>
