--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
             <a href="photography/large/10-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/10-preview.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7837_035.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7975_027.jpg"></a>
+            <a href="photography/large/11-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/11-preview.jpg">
+            </a>
+            <a href="photography/large/12-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/12-preview.jpg">
+            </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
             <a href="/uploads/amy%20in%20the%20forest%20.jpg" class="swipebox pv2 grow db no-underline black">
