--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/amy%20in%20the%20forest%20.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/amy%20in%20the%20forest%20.jpg">
+            <a href="photography/large/13-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/13-preview.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207765_011.jpg"></a>
+            <a href="photography/large/14-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/14-preview.jpg">
+            </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7978_006.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
