--- a/index.html
+++ b/index.html
@@ -105,8 +105,12 @@
             <a href="photography/large/14-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/14-preview.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/7978_006.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207973_001.jpg"></a>
+            <a href="photography/large/15-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/15-preview.jpg">
+            </a>
+            <a href="photography/large/16-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/16-preview.jpg">
+            </a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/for%20instagram%2011.jpg"></a>
 
