--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
             <a href="photography/large/16-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/16-preview.jpg">
             </a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/Copy%20of%207975_031.jpg"></a>
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/for%20instagram%2011.jpg"></a>
+            <a href="photography/large/17-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/17-preview.jpg">
+            </a>
+            <a href="photography/large/18-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/18-preview.jpg">
+            </a>
 
             <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
         </div>
