--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
             <a href="photography/large/18-large.jpg" class="swipebox pv2 grow db no-underline black">
                 <img class="db w-100" src="photography/preview/18-preview.jpg">
             </a>
-
-            <a href="" class="pv2 grow db no-underline black"><img class="db w-100" src="/uploads/A%20Warm%20Room.jpg"></a>
+            <a href="photography/large/19-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/19-preview.jpg">
+            </a>
+            <a href="photography/large/20-large.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="photography/preview/20-preview.jpg">
+            </a>
         </div>
     </main>
 
