--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
     </div>
     <main class="cf pa2 pa3-ns mb5 mb6-ns">
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/1.jpeg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/1.jpeg">
+            <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="paintings/1-preview.jpeg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/2.jpeg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/2.jpeg">
+            <a href="paintings/2.jpeg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="paintings/2.jpeg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/3.jpeg" class="pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/3.jpeg">
+            <a href="paintings/3-large.jpeg" class="pv2 grow db no-underline black">
+                <img class="db w-100" src="paintings/3-preview.jpeg">
             </a>
         </div>
         <div class="fl w-50 w-25-ns ph2">
-            <a href="/uploads/5.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="/uploads/5.jpg">
+            <a href="paintings/4.jpg" class="swipebox pv2 grow db no-underline black">
+                <img class="db w-100" src="paintings/4.jpg">
             </a>
         </div>
     </main>
