--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
             <div class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
-                <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white" href="#contact">Contact</a></p>
+                <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
             </div>
             <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf bt">
