--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </a>
         </div>
     </main>
-    <footer class="bg-near-black near-white" id="contact">
+    <footer class="bg-near-black near-white mb0" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
             <p class="lh-copy f4-ns">For inquiries or just to chat: <a class="near-white" href="mailto:samueldregan@gmail.com">samueldregan@gmail.com</a> / <a class="near-white" href="https://www.instagram.com/samuel_regan">instagram</a></p>
