--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
 
 <script src="lib/jquery-2.1.0.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
-<style>
-    @media screen and (min-width: 60em) {
-        .bg-blue-l {
-            background-color: #0000EE;
-        }
-    }
-
-</style>
 
 <body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
@@ -151,11 +143,11 @@
             </a>
         </div>
     </main>
-    <footer class="bg-near-black near-white mb0" id="contact">
+    <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
             <p class="lh-copy f4-ns">For inquiries or just to chat: <a class="near-white" href="mailto:samueldregan@gmail.com">samueldregan@gmail.com</a> / <a class="near-white" href="https://www.instagram.com/samuel_regan">instagram</a></p>
-            <p class="lh-copy f6-l mt4 courier bt pt4 mb0 ">Site design: <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
+            <p class="lh-copy f6-l mt4 courier bt pt4">Site design: <a class="near-white" href="http://tylernford.com">Tyler N. Ford</a></p>
         </div>
     </footer>
 
