--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </div>
         </div>
     </section>
-
+    
+    <section>
     <div class="mw7 center ph3 ph5-ns ph0-l">
         <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
     </div>
@@ -143,6 +144,7 @@
             </a>
         </div>
     </main>
+    </section>
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
             <h1 class="mt0 f5 f4-ns f3-l near-white pt5 pt6-l normal i">Contact</h1>
