--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
             </div>
             <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
             </div>
 
             <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="http://askanse.bandcamp.com/releases">Askew</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
                     <br class="dn-l">&mdash;Untitled</a></p>
                 <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
             </div>
             <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
                 <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
             </div>
         </div>
