--- a/index.html
+++ b/index.html
@@ -11,139 +11,141 @@
 <body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
     <section class="bg-near-black near-white">
         <div class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
-            <div class="cf pt4 pt5-ns">
+            <header class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
-            </div>
-            <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
-            </div>
+            </header>
+            <section>
+                <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+                    <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
+                </div>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                    <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
+                </div>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+                    <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
+                </div>
 
-            <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
+                <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
+                    <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
+                </div>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
                     <br class="dn-l">&mdash;Untitled</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
-                <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
-            </div>
+                    <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
+                </div>
+                <div class="cf bt">
+                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
+                    <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
+                </div>
+            </section>
         </div>
     </section>
-    
-    <section>
-    <div class="mw7 center ph3 ph5-ns ph0-l">
-        <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
-    </div>
-    <main class="cf pa2 pa3-ns mb5 mb6-ns">
-        <div class="fl w-100 w-50-ns ph2">
-            <a href="photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/1-preview.jpg">
-            </a>
-            <a href="photography/large/2-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/2-preview.jpg">
-            </a>
-            <a href="photography/large/3-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/3-preview.jpg">
-            </a>
-            <a href="photography/large/4-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/4-preview.jpg">
-            </a>
-        </div>
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="photography/large/5-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/5-preview.jpg">
-            </a>
-            <a href="photography/large/6-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/6-preview.jpg">
-            </a>
-            <a href="photography/large/7-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/7-preview.jpg">
-            </a>
-            <a href="photography/large/8-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/8-preview.jpg">
-            </a>
-            <a href="photography/large/9-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/9-preview.jpg">
-            </a>
-            <a href="photography/large/10-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/10-preview.jpg">
-            </a>
-            <a href="photography/large/11-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/11-preview.jpg">
-            </a>
-            <a href="photography/large/12-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/12-preview.jpg">
-            </a>
-        </div>
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="photography/large/13-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/13-preview.jpg">
-            </a>
-            <a href="photography/large/14-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/14-preview.jpg">
-            </a>
-            <a href="photography/large/15-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/15-preview.jpg">
-            </a>
-            <a href="photography/large/16-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/16-preview.jpg">
-            </a>
-            <a href="photography/large/17-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/17-preview.jpg">
-            </a>
-            <a href="photography/large/18-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/18-preview.jpg">
-            </a>
-            <a href="photography/large/19-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/19-preview.jpg">
-            </a>
-            <a href="photography/large/20-large.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="photography/preview/20-preview.jpg">
-            </a>
-        </div>
-    </main>
 
-    <div class="mw7 center ph3 ph5-ns ph0-l">
-        <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
-    </div>
-    <main class="cf pa2 pa3-ns mb5 mb6-ns">
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="paintings/1-preview.jpeg">
-            </a>
+    <section>
+        <div class="mw7 center ph3 ph5-ns ph0-l">
+            <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
         </div>
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="paintings/2.jpeg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="paintings/2.jpeg">
-            </a>
+        <main class="cf pa2 pa3-ns mb5 mb6-ns">
+            <div class="fl w-100 w-50-ns ph2">
+                <a href="photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/1-preview.jpg">
+                </a>
+                <a href="photography/large/2-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/2-preview.jpg">
+                </a>
+                <a href="photography/large/3-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/3-preview.jpg">
+                </a>
+                <a href="photography/large/4-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/4-preview.jpg">
+                </a>
+            </div>
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="photography/large/5-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/5-preview.jpg">
+                </a>
+                <a href="photography/large/6-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/6-preview.jpg">
+                </a>
+                <a href="photography/large/7-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/7-preview.jpg">
+                </a>
+                <a href="photography/large/8-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/8-preview.jpg">
+                </a>
+                <a href="photography/large/9-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/9-preview.jpg">
+                </a>
+                <a href="photography/large/10-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/10-preview.jpg">
+                </a>
+                <a href="photography/large/11-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/11-preview.jpg">
+                </a>
+                <a href="photography/large/12-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/12-preview.jpg">
+                </a>
+            </div>
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="photography/large/13-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/13-preview.jpg">
+                </a>
+                <a href="photography/large/14-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/14-preview.jpg">
+                </a>
+                <a href="photography/large/15-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/15-preview.jpg">
+                </a>
+                <a href="photography/large/16-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/16-preview.jpg">
+                </a>
+                <a href="photography/large/17-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/17-preview.jpg">
+                </a>
+                <a href="photography/large/18-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/18-preview.jpg">
+                </a>
+                <a href="photography/large/19-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/19-preview.jpg">
+                </a>
+                <a href="photography/large/20-large.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="photography/preview/20-preview.jpg">
+                </a>
+            </div>
+        </main>
+
+        <div class="mw7 center ph3 ph5-ns ph0-l">
+            <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
         </div>
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="paintings/3-large.jpeg" class="pv2 grow db no-underline black">
-                <img class="db w-100" src="paintings/3-preview.jpeg">
-            </a>
-        </div>
-        <div class="fl w-50 w-25-ns ph2">
-            <a href="paintings/4.jpg" class="swipebox pv2 grow db no-underline black">
-                <img class="db w-100" src="paintings/4.jpg">
-            </a>
-        </div>
-    </main>
+        <main class="cf pa2 pa3-ns mb5 mb6-ns">
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/1-preview.jpeg">
+                </a>
+            </div>
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="paintings/2.jpeg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/2.jpeg">
+                </a>
+            </div>
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="paintings/3-large.jpeg" class="pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/3-preview.jpeg">
+                </a>
+            </div>
+            <div class="fl w-50 w-25-ns ph2">
+                <a href="paintings/4.jpg" class="swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/4.jpg">
+                </a>
+            </div>
+        </main>
     </section>
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
