--- a/index.html
+++ b/index.html
@@ -9,50 +9,48 @@
 <script src="src/js/jquery.swipebox.js"></script>
 
 <body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
-    <section class="bg-near-black near-white">
-        <div class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
+    <div class="bg-near-black near-white">
+        <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
             <header class="cf pt4 pt5-ns">
                 <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
                 <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
             </header>
-            <section>
-                <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
-                    <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
-                </div>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
-                    <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
-                </div>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
-                    <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
-                </div>
+            <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+                <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
+            </div>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+                <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
+            </div>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+                <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
+            </div>
 
-                <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
-                    <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
-                </div>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
+            <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
+                <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
+            </div>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
                     <br class="dn-l">&mdash;Untitled</a></p>
-                    <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
-                </div>
-                <div class="cf bt">
-                    <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
-                    <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
-                </div>
-            </section>
-        </div>
-    </section>
+                <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
+            </div>
+            <div class="cf bt">
+                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
+                <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
+            </div>
+        </section>
+    </div>
 
     <section>
         <div class="mw7 center ph3 ph5-ns ph0-l">
             <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
         </div>
-        <main class="cf pa2 pa3-ns mb5 mb6-ns">
+        <div class="cf pa2 pa3-ns mb5 mb6-ns">
             <div class="fl w-100 w-50-ns ph2">
                 <a href="photography/large/1-large.jpg" class="swipebox pv2 grow db no-underline black">
                     <img class="db w-100" src="photography/preview/1-preview.jpg">
@@ -119,12 +117,12 @@
                     <img class="db w-100" src="photography/preview/20-preview.jpg">
                 </a>
             </div>
-        </main>
+        </div>
 
         <div class="mw7 center ph3 ph5-ns ph0-l">
             <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
         </div>
-        <main class="cf pa2 pa3-ns mb5 mb6-ns">
+        <div class="cf pa2 pa3-ns mb5 mb6-ns">
             <div class="fl w-50 w-25-ns ph2">
                 <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
                     <img class="db w-100" src="paintings/1-preview.jpeg">
@@ -145,7 +143,7 @@
                     <img class="db w-100" src="paintings/4.jpg">
                 </a>
             </div>
-        </main>
+        </div>
     </section>
     <footer class="bg-near-black near-white" id="contact">
         <div class="mw7 center pb4 pb5-ns ph3 ph5-ns ph0-l">
