--- a/index.html
+++ b/index.html
@@ -8,45 +8,45 @@
 <script src="lib/jquery-2.1.0.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
 
-<body class="athelas bg-near-white" style="-webkit-font-smoothing: antialiased;">
-    <div class="bg-near-black near-white">
-        <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
-            <header class="cf pt4 pt5-ns">
-                <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
-                <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
-            </header>
-            <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
-            </div>
+<body class="athelas bg-near-black near-white" style="-webkit-font-smoothing: antialiased;">
 
-            <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
+    <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
+        <header class="cf pt4 pt5-ns">
+            <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
+            <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
+        </header>
+        <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/ides">Ides</a></p>
+            <p class="fr f4-l courier"><span class="dn-ns">09/15/16</span><span class="dn db-ns">September 15, 2016</span></p>
+        </div>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/a-warm-room">A Warm Room</a></p>
+            <p class="fr f4-l courier"><span class="dn-ns">03/11/16</span><span class="dn db-ns">March 11, 2016</span></p>
+        </div>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/stil-de-grain">Stil de Grain</a></p>
+            <p class="fr f4-l courier"><span class="dn-ns">09/15/15</span><span class="dn db-ns">September 15, 2015</span></p>
+        </div>
+
+        <h3 class="pt4 pt5-ns f5 f4-ns f3-l normal">Collaborations</h3>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://askanse.bandcamp.com/releases">Askew</a></p>
+            <p class="fr f4-l courier"><span class="dn-ns">Forthcoming</span><span class="dn db-ns">Album Forthcoming</span></p>
+        </div>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="https://samuelregan.bandcamp.com/album/untitled">Ben<span class="dn di-l">jamin</span> Hill &amp; Sam<span class="dn di-l">uel</span> Regan
                     <br class="dn-l">&mdash;Untitled</a></p>
-                <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
-            </div>
-            <div class="cf bt">
-                <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
-                <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
-            </div>
-        </section>
-    </div>
+            <p class="fr f4-l courier"><span class="dn-ns">12/09/15</span><span class="dn db-ns">December 9, 2015</span></p>
+        </div>
+        <div class="cf bt">
+            <p class="fl f4-l"><a class="link near-white underline-hover i" href="http://similarity.bandcamp.com">Similarity&mdash;Self-titled</a></p>
+            <p class="fr courier f4-l"><span class="dn-ns">02/17/15</span><span class="dn db-ns">February 17, 2015</span></p>
+        </div>
+    </section>
 
-    <section>
+
+    <section class="bg-near-white near-black">
         <div class="mw7 center ph3 ph5-ns ph0-l">
             <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Photography</h2>
         </div>
