--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="mw7 center ph3 ph5-ns ph0-l">
             <h2 class="f5 f4-ns f3-l mb3 normal pt5 pt6-ns">Painting</h2>
         </div>
-        <div class="cf pa2 pa3-ns mb5 mb6-ns">
+        <div class="cf pa2 pa3-ns mb5 pb6-ns">
             <div class="fl w-50 w-25-ns ph2">
                 <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
                     <img class="db w-100" src="paintings/1-preview.jpeg">
