--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
         <header class="cf pt4 pt5-ns">
             <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
-            <p class="mt0 f5 f4-ns f3-l fr"><a class="link near-white underline-hover" href="#contact">Contact</a></p>
+            <a class="mt0 f5 f4-ns f3-l fr link near-white underline-hover" href="#contact">Contact</a>
         </header>
         <h2 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h2>
         <div class="cf bt">
