--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 
 <body class="athelas bg-near-black near-white" style="-webkit-font-smoothing: antialiased;">
 
-    <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
+    <!--<section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
         <header class="cf pt4 pt5-ns">
             <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
             <a class="mt0 f5 f4-ns f3-l fr link near-white underline-hover" href="#contact">Contact</a>
-        </header>
+        </header>-->
+    <header class="mw7 center ph3 ph5-ns ph0-l cf pt4 pt5-ns">
+        <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
+        <a class="mt0 f5 f4-ns f3-l fr link near-white underline-hover" href="#contact">Contact</a>
+    </header>
+    <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0l">
         <section>
             <h1 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h1>
             <div class="cf bt">
