--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="mt0 f5 f4-ns f3-l near-white normal fl i">Samuel Regan</h1>
         <a class="mt0 f5 f4-ns f3-l fr link near-white underline-hover" href="#contact">Contact</a>
     </header>
-    <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0l">
+    <section class="mw7 center pb5 pb6-ns ph3 ph5-ns ph0-l">
         <section>
             <h1 class="pt5 pt6-ns f5 f4-ns f3-l normal">Albums</h1>
             <div class="cf bt">
