--- a/index.html
+++ b/index.html
@@ -152,6 +152,22 @@
                         <img class="db w-100" src="paintings/4.jpg">
                     </a>
                 </div>-->
+
+                <a href="paintings/1-large.jpeg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/1-preview.jpeg">
+                </a>
+
+
+                <a href="paintings/2.jpeg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/2.jpeg">
+                </a>
+
+                <a href="paintings/3-large.jpeg" class="fl w-50 w-25-ns ph2 pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/3-preview.jpeg">
+                </a>
+                <a href="paintings/4.jpg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
+                    <img class="db w-100" src="paintings/4.jpg">
+                </a>
             </div>
         </section>
     </div>
