--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h2 class="f5 f4-ns f3-l mb3 normal pt4 pt5-ns">Painting</h2>
             </div>
             <div class="cf pa2 pa3-ns pb5 pb6-ns">
-                <!--<div class="fl w-50 w-25-ns ph2">
+                <div class="fl w-50 w-25-ns ph2">
                     <a href="paintings/1-large.jpeg" class="swipebox pv2 grow db no-underline black">
                         <img class="db w-100" src="paintings/1-preview.jpeg">
                     </a>
@@ -151,23 +151,7 @@
                     <a href="paintings/4.jpg" class="swipebox pv2 grow db no-underline black">
                         <img class="db w-100" src="paintings/4.jpg">
                     </a>
-                </div>-->
-
-                <a href="paintings/1-large.jpeg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
-                    <img class="db w-100" src="paintings/1-preview.jpeg">
-                </a>
-
-
-                <a href="paintings/2.jpeg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
-                    <img class="db w-100" src="paintings/2.jpeg">
-                </a>
-
-                <a href="paintings/3-large.jpeg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
-                    <img class="db w-100" src="paintings/3-preview.jpeg">
-                </a>
-                <a href="paintings/4.jpg" class="fl w-50 w-25-ns ph2 swipebox pv2 grow db no-underline black">
-                    <img class="db w-100" src="paintings/4.jpg">
-                </a>
+                </div>
             </div>
         </section>
     </div>
