--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 <link rel="stylesheet" href="src/css/swipebox.css">
 
-<script src="lib/jquery-2.1.0.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="src/js/jquery.swipebox.js"></script>
 
 <body class="athelas bg-near-black near-white" style="-webkit-font-smoothing: antialiased;">
