--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="src/css/swipebox.css">
 
 <script src="lib/jquery-2.1.0.min.js"></script>
-<script src="src/js/jquery.swipebox.js"></script>
+<script>!function(a){function m(){d.setAttribute("content",g),h=!0}function n(){d.setAttribute("content",f),h=!1}function o(b){l=b.accelerationIncludingGravity,i=Math.abs(l.x),j=Math.abs(l.y),k=Math.abs(l.z),a.orientation&&180!==a.orientation||!(i>7||(k>6&&j<8||k<8&&j>6)&&i>5)?h||m():h&&n()}var b=navigator.userAgent;if(/iPhone|iPad|iPod/.test(navigator.platform)&&/OS [1-5]_[0-9_]* like Mac OS X/i.test(b)&&b.indexOf("AppleWebKit")>-1){var c=a.document;if(c.querySelector){var i,j,k,l,d=c.querySelector("meta[name=viewport]"),e=d&&d.getAttribute("content"),f=e+",maximum-scale=1",g=e+",maximum-scale=10",h=!0;d&&(a.addEventListener("orientationchange",m,!1),a.addEventListener("devicemotion",o,!1))}}}(this);</script>
 
 <body class="athelas bg-near-black near-white" style="-webkit-font-smoothing: antialiased;">
     <header class="mw7 center ph3 ph5-ns ph0-l cf pt4 pt5-ns">
