--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<title> </title>
+<title>Samuel Regan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/png" href="/favicon.png">
 <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 <link rel="stylesheet" href="src/css/swipebox.css">
 
@@ -134,7 +135,7 @@
                     </a>
                 </div>
                 <div class="fl w-50 w-25-ns ph2">
-                    <a href="paintings/3-large.jpeg" class="pv2 grow db no-underline black">
+                    <a href="paintings/3-large.jpeg" class="swipebox pv2 grow db no-underline black">
                         <img class="db w-100" src="paintings/3-preview.jpeg">
                     </a>
                 </div>
