--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <section class="center ph3 ph5-ns ph0-l mw7">
         <h1 class="f5 f4-ns f3-l normal pt5 pt6-ns">Albums</h1>
         <div class="bt cf">
+            <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/the-gate">The Gate</a></p>
+            <p class="courier f4-l fr"><span class="dn-ns">10/18/16</span><span class="dn db-ns">October 18, 2016</span></p>
+        </div>
+        <div class="bt cf">
             <p class="f4-l fl "><a class="i link near-white underline-hover" href="https://samuelregan.bandcamp.com/album/the-myth-of-the-given">The Myth of the Given</a></p>
             <p class="courier f4-l fr"><span class="dn-ns">10/13/16</span><span class="dn db-ns">October 13, 2016</span></p>
         </div>
